# llm-peft-trainer-eks

./: AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
configs/: hf_lora_deepspeed_cpu_offload.yaml  hf_lora_multinode.yaml  hf_lora_single_node.yaml  hf_qlora_single_node.yaml  mlx_lora_m5_16gb.yaml
data/: sample.jsonl
docker/: Dockerfile
infra/terraform/: main.tf  outputs.tf  variables.tf
k8s/argo/: multinode-example.yaml  workflowtemplates.yaml
k8s/mlflow/: ingress.yaml  minio.yaml  mlflow.yaml  postgres.yaml  secrets.example.yaml
scripts/: build_and_push.sh  deploy_mlflow_stack.sh  run_hf_local_cpu_smoke.sh  run_mlx_local.sh  submit_argo_eval.sh  submit_argo_train.sh
src/llm_peft_trainer/: __init__.py  cli.py  config.py  data.py  deepspeed_config_builder.py  eval.py  k8s_env.py  logging.py  metrics.py  mlflow_utils.py  s3_io.py  train_hf.py  train_mlx.py
tests/: test_argo_yaml.py  test_config.py  test_deepspeed.py
