[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-peft-trainer-eks"
version = "0.1.0"
description = "Dual-backend LLM LoRA trainer for MLX (Apple Silicon) and HF/Accelerate on EKS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "pyyaml==6.0.2",
  "boto3==1.35.24",
  "mlflow==2.16.2",
  "datasets==3.0.1",
  "transformers==4.45.2",
  "accelerate==0.34.2",
  "peft==0.13.2",
  "torch==2.4.1",
  "prometheus-client==0.21.0",
  "jsonlines==4.0.0",
  "tenacity==9.0.0",
  "types-PyYAML==6.0.12.20240917",
  "types-requests==2.32.0.20240914"
]

[project.optional-dependencies]
mlx = [
  "mlx==0.18.0",
  "mlx-lm==0.18.1"
]
dev = [
  "ruff==0.6.9",
  "mypy==1.11.2",
  "pytest==8.3.3"
]

[project.scripts]
llm-peft-trainer = "llm_peft_trainer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true
